syntax = "proto3";

package cdprocessor;

message GetRippedRequest {}

message GetRippedResponse {
  repeated int32 ripped_ids = 1;
}

service CDProcessor {
  rpc GetRipped (GetRippedRequest) returns (GetRippedResponse);
}
